--- a/phjtec.web/phjtec.web.csproj
+++ b/phjtec.web/phjtec.web.csproj
@@ -34,6 +34,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="content\services\APIDevelopment.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="content\services\APIIntegration.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="content\services\DatabaseDesign.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
