--- a/phjtec.web/phjtec.web.csproj
+++ b/phjtec.web/phjtec.web.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\components\ServiceDetail.tsx" />
     <None Remove="ClientApp\components\Services.tsx" />
   </ItemGroup>
 
@@ -30,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\components\ServiceDetail.tsx" />
     <TypeScriptCompile Include="ClientApp\components\Services.tsx" />
   </ItemGroup>
 
@@ -38,6 +40,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="content\services\APIIntegration.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="content\services\UmbracoCMS.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="content\services\DatabaseDesign.json">
